# openai-build-week-2026

./: .gitignore  AGENTS.md  MVP_IMPLEMENTATION_PLAN.md  MVP_NORTH_STAR.md  README.md  codebase_viz_idea.md  compose.yaml.dev  merge-marshal-README.md  merge-marshal-product-flow.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
backend/src/: main.py
backend/src/merge_marshal_api/: __init__.py  app.py  graph_routes.py  graph_service.py  models.py  settings.py
backend/src/merge_marshal_api/coordination/: __init__.py  engine.py  fixtures.py  models.py  routes.py  service.py
backend/tests/: test_coordination.py  test_graph_api.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts
hierarchical-graph/: .gitignore  README.md  pyproject.toml  setup.py
hierarchical-graph/references/: README.md
hierarchical-graph/references/python-agent-app/: README.md
hierarchical-graph/references/python-agent-app/app/: pyproject.toml
hierarchical-graph/references/python-agent-app/app/backend/conflicts/: detector.py
hierarchical-graph/references/python-agent-app/app/backend/contracts/: models.py
hierarchical-graph/references/python-agent-app/app/backend/orchestration/: decompose.py  planner.py
hierarchical-graph/references/python-agent-app/expected_out/: graph.json
hierarchical-graph/src/hierarchical_graph/: __init__.py  __main__.py  cli.py  model.py  project.py  schema.json  store.py  validate.py
hierarchical-graph/tests/: README.md  test_hgraph.py
(+244 files in other folders)
