[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "merge-marshal-api"
version = "0.1.0"
description = "FastAPI service for Merge Marshal architecture graph artifacts"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.10,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<10",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --basetemp=.pytest-tmp"
pythonpath = ["src"]
testpaths = ["tests"]
