[project]
name = "merge-marshal-api"
version = "0.1.0"
description = "Backend API for the Merge Marshal coordination experience"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
test = ["httpx>=0.27,<1"]

[tool.setuptools.packages.find]
where = ["src"]
